hw4/email/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kia-email-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kia-email-hw4
  template:
    metadata:
      labels:
        app: kia-email-hw4
    spec:
      containers:
        - name: kia-otus-arch-email
          image: ilyakozyrev/kia-otus-arch-email:hw4
          ports:
            - name: email-web
              containerPort: 8003
          livenessProbe:
            httpGet:
              port: 8003
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8003
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
